src/css/modal.styl
.modal-print-button
  display block
  margin 0 auto
  margin-top 10px

.print-modal-header
  text-align center

.print-input-container
  margin-top 5px

.print-input
  float right
  width 60%

.print-input-text
  width 57%

.print-modal-label
  width 40%

